# mimallocate

./: .gitmodules  Cargo.toml
mimallocate-sys/: Cargo.toml  build.rs
mimallocate-sys/src/: lib.rs
