[package]
name = "mimallocate-sys"
authors = ["Deadbeef <ent3rm4n@gmail.com>", "Octavian Oncescu <octavonce@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Beta bindings to the mimalloc allocator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"